--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,2 +1,3 @@
 @import url('https://use.fontawesome.com/releases/v5.8.2/css/all.css');
 @import url('https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css');
+@import url('https://fonts.googleapis.com/css?family=Oxygen+Mono&display=swap');
