--- a/public/less/_globals.less
+++ b/public/less/_globals.less
@@ -1,5 +1,5 @@
 @1em : 15px;
-.active {background:@blue !important; border:5px solid green;}
+
 body {
   margin: 0;
   padding: 0;
@@ -20,20 +20,24 @@ header {
   h4,a {
     font-size:2em;
   }
-  li {
+  .mainNav li {
     a {
+      font-size: @1em*2;
       color:@mainText !important;
       &:hover {
         text-decoration: none;
-        color:@blue !important;
+        color:@red !important;
       }
+      &.active {color:@red !important;}
     }
     &:after {
       content:'•';
+      content:url(https://static.planetminecraft.com/files/avatar/1415868_0.png);
       padding:3em;
       color:@blue;
-      font-size:1.5em;
+      /* font-size:1.5em; */
     }
+
   }
   li:last-child:after {
     content:'';
@@ -46,6 +50,25 @@ section {
   padding-top:2em;
   h1 {
     margin:1em;
+  }
+  .location {
+    position:relative;
+    h1 {
+      color:@red;
+    }
+    &:after {
+      content: ' ';
+      display: block;
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+      background:url(http://www.tacovorepnw.com/images/tacovore_logo_small.png) no-repeat center;
+      background-size: cover;
+      opacity: 0.4;
+    }
   }
 }
 
@@ -60,6 +83,7 @@ footer {
 a, a:link, a:visited {
   color:@blue;
 }
+
 
 hr {
   border:none;
