--- a/public/less/_globals.less
+++ b/public/less/_globals.less
@@ -48,11 +48,12 @@ header {
 section {
   background:@lightGray;
   padding-top:2em;
+  position:relative;
   h1 {
     margin:1em;
   }
   .location {
-    position:relative;
+
     h1 {
       color:@red;
     }
@@ -60,24 +61,24 @@ section {
       content: ' ';
       display: block;
       position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
+      left: 25%;
+      top: @1em;
+      width: 50%;
       height: 100%;
       z-index: 0;
-      background:url(http://www.tacovorepnw.com/images/tacovore_logo_small.png) no-repeat center;
+      background:url(http://www.tacovorepnw.com/images/tacovore_logo_small.png);
       background-size: cover;
-      opacity: 0.4;
+      opacity: 0.2;
     }
   }
 }
 
 footer {
-  border-top:1px solid @red;
-  margin-top:@1em*2;
-  padding-top:@1em*2;
+  /* border-top:1px solid @red; */
+  /* margin-top:@1em*2; */
+  padding-top:@1em;
   background:@lightGray;
-  color:@mainText;
+  color:@lightGray*.75;
 }
 
 a, a:link, a:visited {
